# sudoku-solver

./: Cargo.toml
.github/workflows/: rust-build-test.yml
api/: Cargo.toml  README.md
api/src/: main.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Sudoku.tsx  SudokuGrid.tsx
frontend/src/lib/: Counter.svelte  Sudoku.svelte  SudokuGrid.svelte
frontend/src/routes/: +page.svelte
src/: main.rs
sudoku-solver/: Cargo.toml
sudoku-solver/src/: lib.rs
