[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku-solver = { path = "../sudoku-solver" }
lambda_http = "0.8.1"
lambda_runtime = "0.8.2"
anyhow = "1.0.75"
axum = "0.6.20"
tokio = {version = "1.32.0", features = ["full"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tower-http = { version = "0.4.4", features = ["cors"] }